tests/sksl/errors/ArrayTypeTooManyDimensionsInFuncBody.glsl
### Compilation failed:

error: 1: multi-dimensional arrays are not supported
void func() { float[2][2] x; }
              ^^^^^^^^^^^
1 error
